--- a/resources.html
+++ b/resources.html
@@ -389,6 +389,7 @@
     </main>
 
     <div id="footer-container"></div>
+    <div id="pwa-banner-placeholder"></div>
 
     <script src="components/component-loader.js"></script>
     <script src="accessibility-enhanced.js"></script>
