fixed more tailwind

--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/main.min.css">
-</head>
+
+    <link rel="stylesheet" href="css/tailwind.css"></head>
 <body class="bg-brand-beige">
     <!-- Accessibility: Skip to main content -->
     <a href="#main" class="skip-to-content">Skip to main content</a>
@@ -81,6 +82,6 @@
     </main>
 
     <div id="footer-container"></div>
-    <script src="js/bundle.min.js" defer></script>
+    
 </body>
 </html>
