--- a/src/projects/jefferson-riverfront.html
+++ b/src/projects/jefferson-riverfront.html
@@ -1,16 +1,18 @@
 ---
 layout: base.njk
 title: "Jefferson Riverfront - Bayou Living at Big Cypress"
-description: "Charming 2BR cabin-style home on Big Cypress Bayou in historic Jefferson. Waterfront living with Section 8 eligibility."
+description: "Charming 2BR cabin-style home on Big Cypress Bayou in historic Jefferson. Waterfront living with Section 8
+eligibility."
 banner:
-  variant: hero
-  title: "Affordable Homes for Families & Veterans in East Texas"
-  subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and local pride."
-  image: "banners/hero-property-fallback.webp"
-  eyebrow: "HUD-VASH & Section 8 Approved"
-  showVoucherBadge: true
-  ctaText: "Browse Homes for Families & Veterans"
-  ctaHref: "/get-started.html"
+variant: hero
+title: "Affordable Homes for Families & Veterans in East Texas"
+subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and
+local pride."
+image: "banners/hero-property-fallback.webp"
+eyebrow: "HUD-VASH & Section 8 Approved"
+showVoucherBadge: true
+ctaText: "Browse Homes for Families & Veterans"
+ctaHref: "/get-started.html"
 ---
 
 {% block head %}
@@ -54,8 +56,10 @@ banner:
                 <h1 class="text-4xl font-bold text-brand-navy mb-4">Jefferson Riverfront</h1>
 
                 <div class="flex flex-wrap items-center gap-4 mb-6">
-                    <span class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-medium">Section 8 Ready</span>
-                    <span class="px-3 py-1 bg-blue-100 text-blue-800 rounded-full text-sm font-medium">Waterfront Property</span>
+                    <span class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-medium">Section 8
+                        Ready</span>
+                    <span class="px-3 py-1 bg-blue-100 text-blue-800 rounded-full text-sm font-medium">Waterfront
+                        Property</span>
                     <span class="text-2xl font-bold text-brand-navy">$900/mo</span>
                 </div>
 
@@ -68,17 +72,22 @@ banner:
                     <div>
                         <h3 class="text-xl font-bold text-brand-navy mb-3">Waterfront Lifestyle</h3>
                         <ul class="space-y-2 text-slate-700">
-                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Big Cypress Bayou access</li>
-                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Private boat dock</li>
+                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Big Cypress Bayou
+                                access</li>
+                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Private boat dock
+                            </li>
                             <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Fishing pier</li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-xl font-bold text-brand-navy mb-3">Home Comforts</h3>
                         <ul class="space-y-2 text-slate-700">
-                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Updated kitchen appliances</li>
-                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Wood-burning fireplace</li>
-                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Screened porch</li>
+                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Updated kitchen
+                                appliances</li>
+                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Wood-burning
+                                fireplace</li>
+                            <li class="flex items-center gap-2"><span class="text-green-500">✓</span> Screened porch
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -91,14 +100,24 @@ banner:
                     <input type="hidden" name="_next" value="/thank-you.html">
 
                     <label class="block text-sm font-medium text-slate-700 mb-1">Full Name</label>
-                    <input type="text" name="name" required class="w-full border p-2 rounded">
+                    <input type="text" name="name" required class="w-full border p-2 rounded"
+                        placeholder="Your Full Name">
 
                     <label class="block text-sm font-medium text-slate-700 mb-1">Email</label>
-                    <input type="email" name="email" required class="w-full border p-2 rounded">
+                    <input type="email" name="email" required class="w-full border p-2 rounded"
+                        placeholder="your.email@example.com">
 
-                    <button type="submit" class="btn-primary w-full rounded-lg py-3 mt-4 text-white font-bold">Request Tour</button>
+                    <button type="submit" class="btn-primary w-full rounded-lg py-3 mt-4 text-white font-bold">Request
+                        Tour</button>
                 </form>
             </div>
         </div>
     </div>
 </section>
+
+{% include "property-map.html" %}
+
+{% block scripts %}
+<script src="/js/leaflet.js"></script>
+<script src="/js/google-apps-script-submission.js"></script>
+{% endblock %}
