--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 ---
 layout: base.njk
-title: Premium Affordable Housing For Families and Veterans
-description: Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
-renovations, and community impact.
+pageTitle: "Premium Affordable Housing For Families and Veterans"
+description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
+renovations, and community impact."
 banner:
-variant: hero
-heading: Affordable Homes for Families & Veterans in East Texas # changed from "title"
-subtitle: We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and
-local pride.
+variant: "hero"
+bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
+bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
+and
+local pride."
 image: "banners/hero-home-banner.webp"
-eyebrow: HUD-VASH & Section 8 Approved
+eyebrow: "HUD-VASH & Section 8 Approved"
 showVoucherBadge: true
-ctaText: Browse Homes for Families & Veterans
-ctaHref: /projects/
+ctaText: "Browse Homes for Families & Veterans"
+ctaHref: "/projects/"
 ---
 
 <!-- Page Content -->
