--- a/src/projects.html
+++ b/src/projects.html
@@ -1,12 +1,12 @@
 ---
 layout: base.njk
-title: "Browse Properties | Properties 4 Creations"
+pageTitle: "Browse Properties | Properties 4 Creations"
 description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
 renovations, and community impact."
 banner:
 variant: "hero"
-title: "Transforming Properties into Homes"
-subtitle: "Explore our East Texas property portfolio — all designed for families and veterans."
+bannerTitle: "Transforming Properties into Homes"
+bannerSubtitle: "Explore our East Texas property portfolio — all designed for families and veterans."
 video: "hero-banner-new.mp4"
 image: "banners/hero-projects-banner.webp"
 eyebrow: "40+ Properties Renovated"
