--- a/src/projects/jefferson-riverfront.html
+++ b/src/projects/jefferson-riverfront.html
@@ -1,12 +1,13 @@
 ---
 layout: base.njk
-title: "Jefferson Riverfront - Bayou Living at Big Cypress"
+pageTitle: "Jefferson Riverfront - Bayou Living at Big Cypress"
 description: "Charming 2BR cabin-style home on Big Cypress Bayou in historic Jefferson. Waterfront living with Section 8
 eligibility."
 banner:
 variant: hero
-title: "Affordable Homes for Families & Veterans in East Texas"
-subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and
+bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
+bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
+and
 local pride."
 image: "banners/hero-property-fallback.webp"
 eyebrow: "HUD-VASH & Section 8 Approved"
