--- a/src/about.html
+++ b/src/about.html
@@ -1,16 +1,18 @@
 ---
 layout: base.njk
-title: "About Properties 4 Creations - Veteran Housing Mission"
-description: "Founded by veterans, for veterans. Our mission is to provide dignified, affordable housing solutions for families and service members in East Texas."
+pageTitle: "About Properties 4 Creations - Veteran Housing Mission"
+description: "Founded by veterans, for veterans. Our mission is to provide dignified, affordable housing solutions for
+families and service members in East Texas."
 banner:
-  variant: hero
-  title: "Our Mission: Homes for Families & Heroes"
-  subtitle: "From service to stability, we honor families and veterans with premium renovations and fair pricing. Every home tells the story of those who served."
-  image: "banners/hero-about-banner.webp"
-  eyebrow: "Veteran Owned & Operated"
-  showVoucherBadge: true
-  ctaText: "See Our Impact"
-  ctaHref: "/impact/"
+variant: hero
+bannerTitle: "Our Mission: Homes for Families & Heroes"
+bannerSubtitle: "From service to stability, we honor families and veterans with premium renovations and fair pricing.
+Every home tells the story of those who served."
+image: "banners/hero-about-banner.webp"
+eyebrow: "Veteran Owned & Operated"
+showVoucherBadge: true
+ctaText: "See Our Impact"
+ctaHref: "/impact/"
 ---
 
 <section class="py-16 bg-white">
@@ -21,7 +23,8 @@ banner:
                 <div class="max-w-3xl mx-auto text-lg leading-relaxed text-slate-700 space-y-6">
                     <p>
                         Properties 4 Creations isn't just a housing provider; it's a mission born from military service.
-                        <strong class="text-brand-navy">We rebuild communities.</strong> We understand that the foundation of a stable life is a safe, dignified home.
+                        <strong class="text-brand-navy">We rebuild communities.</strong> We understand that the
+                        foundation of a stable life is a safe, dignified home.
                     </p>
                     <p>
                         We take distressed properties in East Texas and transform them into premium family sanctuaries.
@@ -34,7 +37,8 @@ banner:
                 </div>
             </div>
             <div class="relative h-96 rounded-2xl overflow-hidden shadow-wood">
-                <img src="/public/images/about/mission-team.webp" alt="Properties 4 Creations Team" class="w-full h-full object-cover">
+                <img src="/public/images/about/mission-team.webp" alt="Properties 4 Creations Team"
+                    class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-brand-navy/20"></div>
             </div>
         </div>
@@ -43,17 +47,20 @@ banner:
             <div class="bg-slate-50 p-8 rounded-xl border-t-4 border-brand-wood">
                 <div class="text-4xl mb-4">🎖️</div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Veteran Focus</h3>
-                <p class="text-slate-600">Prioritizing those who served. We understand VA benefits and military housing needs.</p>
+                <p class="text-slate-600">Prioritizing those who served. We understand VA benefits and military housing
+                    needs.</p>
             </div>
             <div class="bg-slate-50 p-8 rounded-xl border-t-4 border-brand-navy">
                 <div class="text-4xl mb-4">🛠️</div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Premium Standards</h3>
-                <p class="text-slate-600">We go beyond "code minimum." Granite counters, new HVACs, and safety-first renovations.</p>
+                <p class="text-slate-600">We go beyond "code minimum." Granite counters, new HVACs, and safety-first
+                    renovations.</p>
             </div>
             <div class="bg-slate-50 p-8 rounded-xl border-t-4 border-green-600">
                 <div class="text-4xl mb-4">🤝</div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Fair Housing</h3>
-                <p class="text-slate-600">Proud participants in HUD-VASH and Section 8 programs, ensuring access for all.</p>
+                <p class="text-slate-600">Proud participants in HUD-VASH and Section 8 programs, ensuring access for
+                    all.</p>
             </div>
         </div>
     </div>
