--- a/src/contact.html
+++ b/src/contact.html
@@ -1,48 +1,54 @@
 ---
 layout: base.njk
-title: "Contact Us | Properties 4 Creations"
-description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium renovations, and community impact."
+pageTitle: "Contact Us | Properties 4 Creations"
+description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
+renovations, and community impact."
 banner:
-  variant: "hero"
-  title: "We’re Here to Help"
-  subtitle: "Reach out to learn more about our homes, programs, or how we serve East Texas families and veterans."
-  image: "banners/hero-contact-banner.webp"
-  eyebrow: "Local Support, Real Answers"
-  showVoucherBadge: true
-  ctaText: "Start Your Journey"
-  ctaHref: "/get-started/"
+variant: "hero"
+bannerTitle: "We’re Here to Help"
+bannerSubtitle: "Reach out to learn more about our homes, programs, or how we serve East Texas families and veterans."
+image: "banners/hero-contact-banner.webp"
+eyebrow: "Local Support, Real Answers"
+showVoucherBadge: true
+ctaText: "Start Your Journey"
+ctaHref: "/get-started/"
 ---
 
-        <section class="max-w-4xl mx-auto py-12 px-4">
-            <form id="contact-form" action="" method="POST" class="bg-white p-8 rounded-xl shadow-lg space-y-6">
-                <input type="hidden" name="_subject" value="Contact Form Inquiry">
-                <input type="hidden" name="_next" value="/thank-you.html">
+<section class="max-w-4xl mx-auto py-12 px-4">
+    <form id="contact-form" action="" method="POST" class="bg-white p-8 rounded-xl shadow-lg space-y-6">
+        <input type="hidden" name="_subject" value="Contact Form Inquiry">
+        <input type="hidden" name="_next" value="/thank-you.html">
 
-                <div class="grid md:grid-cols-2 gap-6">
-                    <div>
-                    <label class="block font-bold text-brand-navy mb-2">Name <span class="text-red-500">*</span></label>
-                    <input type="text" name="name" required aria-required="true" class="w-full border rounded-lg p-3" placeholder="Your Name">
-                    </div>
-                    <div>
-                        <label class="block font-bold text-brand-navy mb-2">Email <span class="text-red-500">*</span></label>
-                        <input type="email" name="email" required aria-required="true" class="w-full border rounded-lg p-3" placeholder="email@example.com">
-                    </div>
-                </div>
-                <div>
-                    <label class="block font-bold text-brand-navy mb-2">Phone (Optional)</label>
-                    <input type="tel" name="phone" aria-label="Contact phone number" class="w-full border rounded-lg p-3" placeholder="(903) 555-0123">
-                </div>
-                <div>
-                    <label class="block font-bold text-brand-navy mb-2">Message <span class="text-red-500">*</span></label>
-                    <textarea name="message" class="w-full border rounded-lg p-3 h-32" placeholder="How can we help?" rows="4" required aria-required="true"></textarea>
-                </div>
-                <div class="flex items-center">
-                    <input type="checkbox" id="veteran-contact" name="veteran" class="mr-2">
-                    <label for="veteran-contact" class="text-slate-700">U.S. Military Veteran</label>
-                </div>
-                <button type="submit" class="btn-base btn-primary px-8 py-3 text-white rounded-lg font-bold w-full text-lg">Send Message</button>
-            </form>
-        </section>
+        <div class="grid md:grid-cols-2 gap-6">
+            <div>
+                <label class="block font-bold text-brand-navy mb-2">Name <span class="text-red-500">*</span></label>
+                <input type="text" name="name" required aria-required="true" class="w-full border rounded-lg p-3"
+                    placeholder="Your Name">
+            </div>
+            <div>
+                <label class="block font-bold text-brand-navy mb-2">Email <span class="text-red-500">*</span></label>
+                <input type="email" name="email" required aria-required="true" class="w-full border rounded-lg p-3"
+                    placeholder="email@example.com">
+            </div>
+        </div>
+        <div>
+            <label class="block font-bold text-brand-navy mb-2">Phone (Optional)</label>
+            <input type="tel" name="phone" aria-label="Contact phone number" class="w-full border rounded-lg p-3"
+                placeholder="(903) 555-0123">
+        </div>
+        <div>
+            <label class="block font-bold text-brand-navy mb-2">Message <span class="text-red-500">*</span></label>
+            <textarea name="message" class="w-full border rounded-lg p-3 h-32" placeholder="How can we help?" rows="4"
+                required aria-required="true"></textarea>
+        </div>
+        <div class="flex items-center">
+            <input type="checkbox" id="veteran-contact" name="veteran" class="mr-2">
+            <label for="veteran-contact" class="text-slate-700">U.S. Military Veteran</label>
+        </div>
+        <button type="submit" class="btn-base btn-primary px-8 py-3 text-white rounded-lg font-bold w-full text-lg">Send
+            Message</button>
+    </form>
+</section>
 
 {% block scripts %}
 <script src="/js/google-apps-script-submission.js"></script>
