--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ image: "banners/hero-home-banner.webp"
 eyebrow: "HUD-VASH & Section 8 Approved"
 showVoucherBadge: true
 ctaText: "Browse Homes for Families & Veterans"
-ctaHref: "/projects/"
+taHref: "/projects/"
 ---
 
 <!-- Page Content -->
@@ -111,6 +111,140 @@ ctaHref: "/projects/"
                     service members across East Texas with expedited processing and tribute renovations.
                 </p>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="py-24 bg-white relative">
+    <div class="max-w-7xl mx-auto px-4">
+        <div class="flex flex-col md:flex-row justify-between items-end mb-12 gap-6">
+            <div class="max-w-2xl">
+                <span class="text-brand-wood font-bold tracking-wider uppercase text-sm">Latest Transformations</span>
+                <h2 class="text-3xl md:text-4xl font-heading font-bold text-brand-navy mt-2">Homes Ready for Families
+                </h2>
+                <p class="text-slate-600 mt-4 text-lg">
+                    Fully renovated, safety-inspected, and ready for move-in. We prioritize quality so you can
+                    prioritize family.
+                </p>
+            </div>
+            <a href="/projects/"
+                class="group flex items-center gap-2 text-brand-navy font-bold hover:text-brand-wood transition-colors">
+                View All Properties
+                <svg class="w-5 h-5 transform group-hover:translate-x-1 transition-transform" fill="none"
+                    viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                </svg>
+            </a>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <article
+                class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
+                <div class="relative h-64 overflow-hidden">
+                    <img src="/public/images/properties/tyler-ranch/hero.webp" alt="Tyler Ranch Home"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                    <div
+                        class="absolute top-4 left-4 bg-green-500 text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
+                        Section 8 Ready</div>
+                    <div
+                        class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-brand-navy/90 to-transparent p-4 pt-12">
+                        <p class="text-white font-bold text-xl">$1,800<span
+                                class="text-sm font-normal opacity-80">/mo</span></p>
+                    </div>
+                </div>
+                <div class="p-6">
+                    <div class="flex items-center gap-2 text-brand-wood text-sm font-medium mb-2">
+                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                        Tyler, TX
+                    </div>
+                    <h3 class="text-xl font-bold text-brand-navy mb-2 group-hover:text-brand-wood transition-colors">
+                        Tyler Ranch Home</h3>
+                    <div class="flex gap-4 text-slate-500 text-sm mt-4 pt-4 border-t border-slate-100">
+                        <span>3 Bed</span>
+                        <span>•</span>
+                        <span>2 Bath</span>
+                        <span>•</span>
+                        <span>1,850 sqft</span>
+                    </div>
+                </div>
+            </article>
+
+            <article
+                class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
+                <div class="relative h-64 overflow-hidden">
+                    <img src="/public/images/properties/longview-victorian/hero.webp" alt="Longview Victorian"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                    <div
+                        class="absolute top-4 left-4 bg-brand-navy text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
+                        Historic</div>
+                    <div
+                        class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-brand-navy/90 to-transparent p-4 pt-12">
+                        <p class="text-white font-bold text-xl">$1,300<span
+                                class="text-sm font-normal opacity-80">/mo</span></p>
+                    </div>
+                </div>
+                <div class="p-6">
+                    <div class="flex items-center gap-2 text-brand-wood text-sm font-medium mb-2">
+                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                        Longview, TX
+                    </div>
+                    <h3 class="text-xl font-bold text-brand-navy mb-2 group-hover:text-brand-wood transition-colors">
+                        Longview Victorian</h3>
+                    <div class="flex gap-4 text-slate-500 text-sm mt-4 pt-4 border-t border-slate-100">
+                        <span>4 Bed</span>
+                        <span>•</span>
+                        <span>3 Bath</span>
+                        <span>•</span>
+                        <span>2,400 sqft</span>
+                    </div>
+                </div>
+            </article>
+
+            <article
+                class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
+                <div class="relative h-64 overflow-hidden">
+                    <img src="/public/images/properties/jefferson-riverfront/hero.webp" alt="Jefferson Riverfront"
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                    <div
+                        class="absolute top-4 left-4 bg-brand-wood text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
+                        Waterfront</div>
+                    <div
+                        class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-brand-navy/90 to-transparent p-4 pt-12">
+                        <p class="text-white font-bold text-xl">$900<span
+                                class="text-sm font-normal opacity-80">/mo</span></p>
+                    </div>
+                </div>
+                <div class="p-6">
+                    <div class="flex items-center gap-2 text-brand-wood text-sm font-medium mb-2">
+                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"></svg>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                        Jefferson, TX
+                    </div>
+                    <h3 class="text-xl font-bold text-brand-navy mb-2 group-hover:text-brand-wood transition-colors">
+                        Jefferson Riverfront</h3>
+                    <div class="flex gap-4 text-slate-500 text-sm mt-4 pt-4 border-t border-slate-100">
+                        <span>2 Bed</span>
+                        <span>•</span>
+                        <span>1 Bath</span>
+                        <span>•</span>
+                        <span>950 sqft</span>
+                    </div>
+                </div>
+            </article>
         </div>
     </div>
 </section>
