--- a/src/projects/jefferson-riverfront.html
+++ b/src/projects/jefferson-riverfront.html
@@ -17,6 +17,9 @@ ctaHref: "/get-started.html"
 ---
 
 {% block head %}
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
