--- a/src/get-started.html
+++ b/src/get-started.html
@@ -146,10 +146,19 @@ ctaHref: "#impact-form"
             <div class="flow-node p-6 rounded-xl text-center">
                 <div
                     class="w-16 h-16 bg-brand-navy rounded-full flex items-center justify-center text-white text-2xl font-bold mx-auto mb-4">
-                    🏠</div>
+                    <svg class="w-8 h-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                    </svg>
+                </div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Your Home</h3>
                 <p class="text-slate-600 mb-4">Any condition, fair market value, no fees deducted</p>
-                <div class="text-2xl mb-2">💸</div>
+                <div class="text-2xl mb-2">
+                    <svg class="w-8 h-8 text-brand-wood" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01" />
+                    </svg>
+                </div>
                 <div class="text-brand-wood font-bold">100% to You</div>
             </div>
 
@@ -157,10 +166,19 @@ ctaHref: "#impact-form"
             <div class="flow-node p-6 rounded-xl text-center">
                 <div
                     class="w-16 h-16 bg-brand-wood rounded-full flex items-center justify-center text-white text-2xl font-bold mx-auto mb-4">
-                    🔨</div>
+                    <svg class="w-8 h-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 3.214L13 21l-2.286-6.857L5 12l5.714-3.214L13 3z" />
+                    </svg>
+                </div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Premium Renovation</h3>
                 <p class="text-slate-600 mb-4">Complete renovation with veteran standards</p>
-                <div class="text-2xl mb-2">✨</div>
+                <div class="text-2xl mb-2">
+                    <svg class="w-8 h-8 text-brand-wood" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                </div>
                 <div class="text-brand-wood font-bold">ADA Compliant</div>
             </div>
 
@@ -168,10 +186,19 @@ ctaHref: "#impact-form"
             <div class="flow-node p-6 rounded-xl text-center">
                 <div
                     class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl font-bold mx-auto mb-4">
-                    🇺🇸</div>
+                    <svg class="w-8 h-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3.217 10h17.566M10 3.217v13.566M10 3.217l-6.783 6.783M10 3.217l6.783 6.783" />
+                    </svg>
+                </div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Family & Veteran Sanctuary</h3>
                 <p class="text-slate-600 mb-4">Section 8 ready homes for veteran families</p>
-                <div class="text-2xl mb-2">🏡</div>
+                <div class="text-2xl mb-2">
+                    <svg class="w-8 h-8 text-brand-wood" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5" />
+                    </svg>
+                </div>
                 <div class="text-brand-wood font-bold">Safe & Comfortable</div>
             </div>
 
@@ -179,10 +206,21 @@ ctaHref: "#impact-form"
             <div class="flow-node p-6 rounded-xl text-center">
                 <div
                     class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-2xl font-bold mx-auto mb-4">
-                    🌱</div>
+                    <svg class="w-8 h-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M13 10V3L4 14h7v7l9-11h-7z" />
+                    </svg>
+                </div>
                 <h3 class="text-xl font-bold text-brand-navy mb-3">Community Impact</h3>
                 <p class="text-slate-600 mb-4">Stronger neighborhoods, veterans rebuilding lives</p>
-                <div class="text-2xl mb-2">🤝</div>
+                <div class="text-2xl mb-2">
+                    <svg class="w-8 h-8 text-brand-wood" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M16 21v-2a4 4 0 00-4-4H6a4 4 0 00-4 4v2" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                </div>
                 <div class="text-brand-wood font-bold">Lasting Change</div>
             </div>
         </div>
