--- a/src/impact.html
+++ b/src/impact.html
@@ -42,7 +42,13 @@ ctaHref: "/contact/"
                 <div class="flex items-center gap-2 mb-4">
                     <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-bold">HUD-VASH
                         Success</span>
-                    <span class="text-slate-500 text-sm">📍 Tyler, TX</span>
+                    <svg class="w-4 h-4 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M15 11a3 3 0 01-6 0 3 3 0 016 0z" />
+                    </svg>
+                    <span class="text-slate-500 text-sm">Tyler, TX</span>
                 </div>
                 <p class="text-slate-600 mb-6 leading-relaxed">
                     Sgt. Reynolds returned to Tyler needing a wheelchair-accessible home for his wife and two children.
@@ -117,7 +123,13 @@ ctaHref: "/contact/"
                         <div class="flex items-center gap-2 mb-3">
                             <span class="bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full">First-Time
                                 Homebuyers</span>
-                            <span class="text-slate-500 text-sm">📍 East Texas Region</span>
+                            <svg class="w-4 h-4 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 01-6 0 3 3 0 016 0z" />
+                            </svg>
+                            <span class="text-slate-500 text-sm">East Texas Region</span>
                         </div>
                         <p class="text-slate-600 mb-4">
                             After years of renting, the Martinezes found their forever home. Our fair market pricing
@@ -142,7 +154,13 @@ ctaHref: "/contact/"
                         <div class="flex items-center gap-2 mb-3">
                             <span class="bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-full">VA Transition
                                 Support</span>
-                            <span class="text-slate-500 text-sm">📍 Longview, TX</span>
+                            <svg class="w-4 h-4 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 01-6 0 3 3 0 016 0z" />
+                            </svg>
+                            <span class="text-slate-500 text-sm">Longview, TX</span>
                         </div>
                         <p class="text-slate-600 mb-4">
                             Separating from 20 years of service, Sgt. Thompson needed more than housing—he needed
@@ -166,7 +184,13 @@ ctaHref: "/contact/"
                         <div class="flex items-center gap-2 mb-3">
                             <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">ADA
                                 Compliant</span>
-                            <span class="text-slate-500 text-sm">📍 Jefferson, TX</span>
+                            <svg class="w-4 h-4 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 01-6 0 3 3 0 016 0z" />
+                            </svg>
+                            <span class="text-slate-500 text-sm">Jefferson, TX</span>
                         </div>
                         <p class="text-slate-600 mb-4">
                             Living with mobility challenges, the Garcias needed accessible housing without breaking the
@@ -185,14 +209,23 @@ ctaHref: "/contact/"
             <div class="bg-white p-8 rounded-2xl shadow-wood border border-brand-beige">
                 <div class="flex items-start gap-4">
                     <div class="w-16 h-16 bg-brand-navy rounded-full flex items-center justify-center">
-                        <span class="text-2xl text-white">🌟</span>
+                        <svg class="w-8 h-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
                     </div>
                     <div>
                         <h3 class="text-xl font-bold text-brand-navy mb-2">Neighborhood Renewal</h3>
                         <div class="flex items-center gap-2 mb-3">
                             <span class="bg-gold-100 text-gold-800 text-xs px-2 py-1 rounded-full">Community
                                 Impact</span>
-                            <span class="text-slate-500 text-sm">📍 East Texas Region</span>
+                            <svg class="w-4 h-4 text-slate-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 01-6 0 3 3 0 016 0z" />
+                            </svg>
+                            <span class="text-slate-500 text-sm">East Texas Region</span>
                         </div>
                         <p class="text-slate-600 mb-4">
                             Our renovations don't just change homes—they transform neighborhoods. Fair housing
