--- a/src/404.html
+++ b/src/404.html
@@ -4,8 +4,8 @@ title: "Page Not Found | Properties 4 Creations"
 description: "The page you are looking for could not be found."
 banner:
 variant: hero
-title: "Page Not Found"
-subtitle: "Every path leads to sanctuary when you're on the right journey. Let's get you back on track."
+bannerTitle: "Page Not Found"
+bannerSubtitle: "Every path leads to sanctuary when you're on the right journey. Let's get you back on track."
 image: "banners/hero-404-banner.jpg"
 showVoucherBadge: false
 ctaText: "Return Home"
