--- a/src/projects/tyler-ranch-home.html
+++ b/src/projects/tyler-ranch-home.html
@@ -5,8 +5,9 @@ description: "Affordable housing solutions for families and veterans in East Tex
 renovations, and community impact."
 banner:
 variant: "hero"
-title: "Affordable Homes for Families & Veterans in East Texas"
-subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust, and
+bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
+bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
+and
 local pride."
 image: "banners/hero-property-fallback.webp"
 eyebrow: "HUD-VASH & Section 8 Approved"
