hero-home banner fix

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@ description: "Affordable housing solutions for families and veterans in East Tex
 renovations, and community impact."
 banner:
 variant: "hero"
-bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
-bannerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
+title: "Affordable Homes for Families & Veterans in East Texas"
+subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
 and
 local pride."
 image: "banners/hero-home-banner.webp"
