--- a/src/contact.html
+++ b/src/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-pageTitle: "Contact Us | Properties 4 Creations"
+title: "Contact Us | Properties 4 Creations"
 description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
 renovations, and community impact."
 banner:
@@ -17,7 +17,7 @@ ctaHref: "/get-started/"
 <section class="max-w-4xl mx-auto py-12 px-4">
     <form id="contact-form" action="" method="POST" class="bg-white p-8 rounded-xl shadow-lg space-y-6">
         <input type="hidden" name="_subject" value="Contact Form Inquiry">
-        <input type="hidden" name="_next" value="/thank-you.html">
+        <input type="hidden" name="_next" value="/thank-you/">
 
         <div class="grid md:grid-cols-2 gap-6">
             <div>
