--- a/src/gallery.html
+++ b/src/gallery.html
@@ -1,9 +1,9 @@
 ---
 layout: base.njk
-pageTitle: "Renovation Gallery | Properties 4 Creations"
+title: "Renovation Gallery | Properties 4 Creations"
 description: "See the transformation. Browse our gallery of veteran housing renovations in East Texas."
 banner:
-variant: hero
+variant: "hero"
 bannerTitle: "Transformation Gallery"
 bannerSubtitle: "Seeing is believing. Slide to explore how we turn distressed properties into dignified family homes."
 image: "banners/hero-projects-banner.webp"
