--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 ---
 layout: base.njk
-pageTitle: "Premium Affordable Housing For Families and Veterans"
+title: "Premium Affordable Housing For Families and Veterans"
 description: "Affordable housing solutions for families and veterans in East Texas. Transparent pricing, premium
 renovations, and community impact."
 banner:
 variant: "hero"
-title: "Affordable Homes for Families & Veterans in East Texas"
-subtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
+bannerTitle: "Affordable Homes for Families & Veterans in East Texas"
+banerSubtitle: "We create safe, high-quality homes for families and veterans using vouchers — with transparency, trust,
 and
 local pride."
 image: "banners/hero-home-banner.webp"
@@ -19,6 +19,8 @@ ctaHref: "/projects/"
 {% block head %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 {% endblock %}
 
 <!-- Page Content -->
@@ -148,7 +150,8 @@ ctaHref: "/projects/"
                 class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
                 <div class="relative h-64 overflow-hidden">
                     <img src="/public/images/properties/tyler-ranch/hero.webp" alt="Tyler Ranch Home"
-                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy">
                     <div
                         class="absolute top-4 left-4 bg-green-500 text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
                         Section 8 Ready</div>
@@ -184,7 +187,8 @@ ctaHref: "/projects/"
                 class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
                 <div class="relative h-64 overflow-hidden">
                     <img src="/public/images/properties/longview-victorian/hero.webp" alt="Longview Victorian"
-                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy">
                     <div
                         class="absolute top-4 left-4 bg-brand-navy text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
                         Historic</div>
@@ -220,7 +224,8 @@ ctaHref: "/projects/"
                 class="group rounded-2xl overflow-hidden shadow-subtle hover:shadow-floating transition-all duration-500 hover:-translate-y-2 bg-white border border-slate-100">
                 <div class="relative h-64 overflow-hidden">
                     <img src="/public/images/properties/jefferson-riverfront/hero.webp" alt="Jefferson Riverfront"
-                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                        class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700"
+                        loading="lazy">
                     <div
                         class="absolute top-4 left-4 bg-brand-wood text-white text-xs font-bold px-3 py-1 rounded-full shadow-md uppercase tracking-wide">
                         Waterfront</div>
@@ -232,11 +237,12 @@ ctaHref: "/projects/"
                 </div>
                 <div class="p-6">
                     <div class="flex items-center gap-2 text-brand-wood text-sm font-medium mb-2">
-                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"></svg>
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                        <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
                         Jefferson, TX
                     </div>
                     <h3 class="text-xl font-bold text-brand-navy mb-2 group-hover:text-brand-wood transition-colors">
@@ -283,7 +289,6 @@ ctaHref: "/projects/"
 
 {% block scripts %}
 <script id="properties-data" type="application/json">{{ properties | dump | safe }}</script>
-<script src="/js/leaflet.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         if (typeof L !== 'undefined' && document.getElementById('property-map')) {
